se implemento un boton para ver mas y ver menos en la descripcion sobre mi para mobile , añadiendo tambien un JavaScript para dicha funcionalidad

--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ h2 {
 h1 {
   color: #08bdb4 !important;
 }
+@media (max-width: 767.98px) {
+  .text-content {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Líneas a mostrar */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
 .card-text {
   color: black;
 }
